Under BeOS, we must call Normalize() on a local file before it can be used. Thanks to Hiromasa Kato <hiro@eng.ia.state.edu> for the patch. Bug #53014. r=cls@seawood.org sr=scc@mozilla.org